# MioTTS-OpenAI-Adapter

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  entrypoint.sh  memo.txt  openai_tts_adapter.py  pyproject.toml  run.sh
