[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miotts-openai-adapter"
version = "0.1.0"
description = "OpenAI-compatible TTS adapter for MioTTS-Inference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=1.12.0",
  "fastapi>=0.111.0",
  "g2p_en",
  "gradio>=4.0.0",
  "httpx>=0.27.0",
  "miocodec @ git+https://github.com/Aratako/MioCodec@main",
  "ninja>=1.13.0",
  "nltk",
  "orjson",
  "pyopenjtalk",
  "python-multipart>=0.0.9",
  "soundfile",
  "transformers<5",
  "uvicorn>=0.30.0",
]

[tool.setuptools]
py-modules = ["openai_tts_adapter"]


[tool.uv]
allow-insecure-host = [
  "localhost",
  "127.0.0.1",
  "host.containers.internal",
]
